--- a/MMM-CatClaws.css
+++ b/MMM-CatClaws.css
@@ -3,6 +3,8 @@
 	font-weight: 400;
 	font-size: 1rem;
 	line-height: 1.5;
+	width: 100%;
+	max-width: 100%;
 }
 
 .mmm-catclaws .tiles-container {
@@ -10,6 +12,8 @@
 	flex-wrap: wrap;
 	gap: 15px;
 	padding: 10px;
+	justify-content: center;
+	width: 100%;
 }
 
 .mmm-catclaws .cat-tile {
